fixed header spacing

--- a/src/css/output.css
+++ b/src/css/output.css
@@ -375,6 +375,9 @@
   .w-3\/4 {
     width: calc(3/4 * 100%);
   }
+  .w-3\/12 {
+    width: calc(3/12 * 100%);
+  }
   .w-5\/12 {
     width: calc(5/12 * 100%);
   }
@@ -619,6 +622,9 @@
   }
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
+  }
+  .pr-4 {
+    padding-right: calc(var(--spacing) * 4);
   }
   .pb-2 {
     padding-bottom: calc(var(--spacing) * 2);
